--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,46 @@
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+!src/**/build/
+##
+**/build/
+*.iws
+.classpath
 .gradle
+.gradletasknamecache
 .idea
+.idea/**/aws.xml
+.idea/**/contentModel.xml
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/dataSources/
+.idea/**/dbnavigator.xml
+.idea/**/dictionaries
+.idea/**/dynamic.xml
+.idea/**/gradle.xml
+.idea/**/libraries
+.idea/**/mongoSettings.xml
+.idea/**/shelf
+.idea/**/sqlDataSources.xml
+.idea/**/tasks.xml
+.idea/**/uiDesigner.xml
+.idea/**/usage.statistics.xml
+.idea/**/workspace.xml
+.idea/caches/build_file_checksums.ser
+.idea/httpRequests
+.idea/replstate.xml
+.idea/sonarlint/
+.idea_modules/
 .intellijPlatform
+.kotlin/
+.project
 .qodana
-build
 .run/
-
+atlassian-ide-plugin.xml
+build
+cmake-build-*/
+com_crashlytics_export_strings.xml
+crashlytics-build.properties
+crashlytics.properties
+fabric.properties
+gradle-app.setting
+out/
