--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 pluginGroup=com.dalsegnosolutions.ij.swrf
 pluginName=Step-Wise Region Folding
 pluginRepositoryUrl=https://github.com/Lootwig/stepwise-region-folding
-pluginVersion=0.0.1
+pluginVersion=1.0.0
 pluginSinceBuild=251
-pluginUntilBuild=251.*
+pluginUntilBuild=253.*
 platformType=IU
-platformVersion=2025.1
+platformVersion=LATEST-EAP-SNAPSHOT
 platformPlugins=
 platformBundledPlugins=
-gradleVersion=8.11
+gradleVersion=8.12.1
 kotlin.stdlib.default.dependency=false
 org.gradle.configuration-cache=true
 org.gradle.caching=true
